# mindly-app

./: LICENSE  README.md  docker-compose.yml  package-lock.json
.github/workflows/: main.yml
backend/: .gitignore  .pylintrc  Dockerfile  README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini  render_start.sh
backend/accounts/: admin.py  apps.py  backends.py  middleware.py  models.py  pipeline.py  serializers.py  signals.py  urls.py  views.py  views_picture.py
backend/accounts/migrations/: 0001_initial.py  0002_user_is_private.py  0003_user_image_status.py  0004_alter_user_full_name.py  0005_alter_user_provider.py  0006_create_admin.py  0006_post.py  0007_post_media.py  0008_alter_post_media.py  0009_alter_post_content.py  0010_user_following_alter_user_is_private.py  0011_profile.py  0012_post_moderation_status.py  0013_remove_user_is_private_profile_is_private.py  0014_remove_user_following_block_follow.py  0015_user_following.py  0016_follow_unfollowed_at.py  0017_post_is_deleted.py  0018_like.py  0019_comment.py  0020_comment_media_url_alter_comment_content.py  0021_comment_image.py  0022_notification.py  0023_report.py  0024_alter_report_unique_together.py  0025_notification_text_and_more.py  0026_notification_stored_post_content.py  0027_user_ban_reason_user_is_banned.py  0028_remove_user_bio_remove_user_image_status_and_more.py  0029_add_follow_indexes.py  0030_alter_user_provider.py  0031_alter_user_provider.py
backend/accounts/tests/: conftest.py  factories.py  test_admin.py  test_admin_access.py  test_auth_backend.py  test_ban.py  test_block_system.py  test_cache.py  test_comments.py  test_concurrency_tal37.py  test_edge_cases.py  test_feed_logic.py  test_follow_system.py  test_likes.py  test_login_flows.py  test_models.py  test_moderation.py  test_notifications.py  test_posts.py  test_privacy.py  test_profile.py  test_profile_connections_integration.py  test_profile_posts.py  test_search_and_suggestions.py  test_serializers.py  test_social.py
backend/config/: settings.py  urls.py
backend/media/posts/videos/2026/02/: 20260204_103809_4M6OAqa.webm  20260204_103809_4M6OAqa_tmp.webm
backend/mindly/: asgi.py  settings.py  urls.py  wsgi.py
backend/templates/: api.html
backend/users/: admin.py
backend/users/migrations/: 0001_initial.py
docs/sprints/: REVIEW_01.md  retro_01.md  retro_03.md  retro_04.md  retro_06.md  retro_07.md  retro_08.md  review_02.md  review_03.md  review_04.md  review_05.md  review_06.md  review_07.md  review_08.md
frontend/: .gitignore  .prettierignore  Dockerfile  cypress.config.js  eslint.config.js  package-lock.json  package.json  vercel.json  vite.config.js
frontend/cypress/fixtures/: notifications_report.json
frontend/cypress/support/: commands.js  component.js  e2e.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  axios.js
frontend/src/components/: BlockedUsersList.cy.jsx  BlockedUsersList.jsx  CommentButton.cy.jsx  CommentButton.jsx  CommentItem.cy.jsx  CommentItem.jsx  CommentModal.cy.jsx  CommentModal.jsx  ConnectionsModal.cy.jsx  ConnectionsModal.jsx  CreatePost.cy.jsx  CreatePost.jsx  CreatePostModal.cy.jsx  CreatePostModal.jsx  Feed.cy.jsx  Feed.jsx  FollowButton.cy.jsx  FollowButton.jsx  ForgotPasswordModal.jsx  GiftSelector.cy.jsx  GiftSelector.jsx  GoogleLoginButton.cy.jsx  GoogleLoginButton.jsx  LikeButton.cy.jsx  LikeButton.jsx  LoadingScreen.cy.jsx  LoadingScreen.jsx  MediaLightbox.cy.jsx  MediaLightbox.jsx  Navbar.cy.jsx  Navbar.jsx  NotificationLink.cy.jsx  NotificationLink.jsx  Notifications.cy.jsx  Notifications.jsx  PostActions.cy.jsx  PostActions.jsx  PostCard.cy.jsx  PostCard.jsx  PrivateRoute.cy.jsx  (+17 more)
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
frontend/src/store/: useRelationshipStore.js
(+27 files in other folders)
